// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asterisk.md - markdown-verify: asterisk.md 1`] = `
**123**
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
**123**

`;

exports[`underscore.md - markdown-verify: underscore.md 1`] = `
__123__
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
**123**

`;
